--- a/QuanLyThuChi/QuanLyThuChi/App.xaml
+++ b/QuanLyThuChi/QuanLyThuChi/App.xaml
@@ -108,6 +108,7 @@
                 <Setter Property="FontSize" Value="Small" />
                 <Setter Property="VerticalOptions" Value="Start" />
                 <Setter Property="Margin" Value="5,0,0,5" />
+                <Setter Property="TextColor" Value="Gray" />
                 <Setter Property="FontFamily" Value="{StaticResource RobotoFontRegular}" />
             </Style>
             <Style x:Key="CostThuFormat" TargetType="Label">
@@ -176,11 +177,12 @@
             </Style>
             <Style x:Key="ImageMore" TargetType="Image">
                 <Setter Property="Margin" Value="20,20,20,10" />
-                <Setter Property="HeightRequest" Value="50" />
+                <Setter Property="HeightRequest" Value="40" />
                 <Setter Property="WidthRequest" Value="100" />
             </Style>
             <Style x:Key="LabelMore" TargetType="Label">
                 <Setter Property="FontSize" Value="Body" />
+                <Setter Property="TextColor" Value="#808080" />
                 <Setter Property="HorizontalTextAlignment" Value="Center" />
                 <Setter Property="Margin" Value="0,0,0,10" />
                 <Setter Property="FontFamily" Value="{StaticResource RobotoFontRegular}" />
