--- a/QuanLyThuChi/QuanLyThuChi/Views/ChartPage.xaml
+++ b/QuanLyThuChi/QuanLyThuChi/Views/ChartPage.xaml
@@ -33,13 +33,18 @@
                 HorizontalOptions="StartAndExpand"
                 ItemsSource="{Binding MonthPicker}"
                 SelectedItem="{Binding MonthSelected}"
+                TextColor="Black"
                 WidthRequest="90">
                 <Picker.Behaviors>
                     <b:EventToCommandBehavior Command="{Binding SelectedIndexChangedCommand}" EventName="SelectedIndexChanged" />
                 </Picker.Behaviors>
             </Picker>
-            <Label Grid.Row="2" IsVisible="{Binding IsNotData}"
-                   Text="Không có dữ liệu." Margin="10,0,0,0" Style="{StaticResource TitleFormat}" />
+            <Label
+                Grid.Row="2"
+                Margin="10,0,0,0"
+                IsVisible="{Binding IsNotData}"
+                Style="{StaticResource TitleFormat}"
+                Text="Không có dữ liệu." />
             <microcharts:ChartView
                 Grid.Row="2"
                 Margin="0,10,0,10"
